tests/cases/loops/errors/err_for_body_type_mismatch.aipl
import { == } from builtins;

fn main() -> i64 {
    for (let c : "x") {
        let _ = c == 5;
    }
    0
}
--- errors ---
error: "==" between char and i64: both sides must be the same type
 --> ./tests/cases/loops/errors/err_for_body_type_mismatch.aipl:5:17
  |
5 |         let _ = c == 5;
  |                 ^^^^^^
